--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
           Test your coding knowledge with this timed quiz! Answer the following questions within the given time limit. Pay attention! Wrong answers will deduct 10 seconds from your time!
         </div>
         <button class="start-button">Start Quiz</button>
+        <div id="quiz"></div>
+        <div id="results"></div>
       </section>    
     </main>
     <script src="assets/js/script.js"></script>
